<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage_background"
    tools:context="com.logicaltriangle.babyabc.InfoActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/info_home_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/home"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:background="#CC000000">

            <ScrollView
                android:id="@+id/id_scrollView_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center_horizontal"
                            android:padding="20dp">
                            <ImageView
                                android:layout_marginTop="100dp"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:src="@drawable/logo"/>
                            <TextView
                                android:textAlignment="center"
                                android:layout_margin="20dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:text="@string/objective"
                                android:textColor="#FFF"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingLeft="25dp"
                            android:orientation="vertical">

                            <!--      INFO       -->

                            <TextView
                                android:layout_marginTop="100dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Credits :"
                                android:textSize="18sp"
                                android:textAllCaps="true"
                                android:textStyle="bold"
                                android:textColor="#FFF">
                            </TextView>

                            <TextView
                                android:layout_marginTop="20dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/data_analysis"
                                android:textColor="#FFF">
                            </TextView>

                            <TextView
                                android:layout_marginTop="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ui_ux_graphics"
                                android:textColor="#FFF">
                            </TextView>

                            <TextView
                                android:layout_marginTop="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/developer"
                                android:textColor="#FFF">
                            </TextView>

                            <TextView
                                android:layout_marginTop="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sound"
                                android:textColor="#FFF">
                            </TextView>

                            <TextView
                                android:layout_marginTop="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/testing"
                                android:textColor="#FFF">
                            </TextView>

                            <TextView
                                android:layout_marginTop="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/manager"
                                android:textColor="#FFF">
                            </TextView>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">

                        <ImageView
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/sdmg"/>
                        <TextView
                            android:layout_margin="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FFF"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:text="@string/conducted"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="2"
                            android:orientation="horizontal"
                            android:background="#fff">

                            <ImageView
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:src="@drawable/biti"
                                android:layout_gravity="center"/>

                            <ImageView
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="100dp"
                                android:src="@drawable/lt"
                                android:layout_gravity="center"/>

                        </LinearLayout>
                        <TextView
                            android:layout_margin="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#7E7777"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:text="@string/copyright"/>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>